# open-habitation

./: .env-example  .gitignore  LICENSE  Procfile  README.md  api.py  api_1.py  api_helpers.py  api_prototype.py  create_database.py  datapackage.json  docker-compose.yml  download_production_data.py  external_APIs.py  heroku.yml  pyproject.toml  release-jobs.sh  requirements.txt  run.py  tsconfig.json
data/: README
public/: api.py  api_helpers.py  app.js  fetchers.js  index.html  script.js  styles.css
release/: create_database.py  create_sql_tables.py  download_database_files.py
src/: api_helpers.py  app.ts  fetchers.ts
