[tool.poetry]
name = "EcoHabitasOpen"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
pandas-datapackage-reader = "^0.18.0"
falcon-apispec = "v0.3.0"
python = ">=3.7.1"
swagger-ui-py = "^0.4.1"
pyproj = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
